--- a/src/component/Product/Product.css
+++ b/src/component/Product/Product.css
@@ -630,3 +630,34 @@ body {
   min-width: 120px;
   z-index: 9999; /* cực cao để nổi lên trên */
 }
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.modal {
+  background: #fff;
+  padding: 20px 30px;
+  border-radius: 12px;
+  text-align: center;
+  width: 400px;
+  animation: fadeIn 0.3s ease;
+}
+
+@keyframes fadeIn {
+  from { transform: scale(0.95); opacity: 0; }
+  to { transform: scale(1); opacity: 1; }
+}
+
+.product-img:hover {
+  transform: scale(1.05);
+  transition: 0.2s;
+}
